re-write all scripts (some use-cases could be broken now)
IDEA now uses specific data directory inside apps folder. It could be necessary to copy existing .idea directory there

git-svn-id: https://secure.diverse.org.ru/jonny/svn/util/trunk/TeamCity.Downloader@196 5c360b9f-cb11-f648-b5e7-fb5e491e6b3d